Solve filter not initializing correctly due to SSR in production. Change continue buttob behavior on mobile watch. Hover effect page hero scene buttos.

--- a/src/assets/css/partials/_colors.scss
+++ b/src/assets/css/partials/_colors.scss
@@ -74,7 +74,7 @@ $state-neutral-light: $monochrome-1;
   // For use by Button component (animates colors when hovering)
   --button-color: #{$main};
   --button-color-background: #{$monochrome-1};
-  --button-color-background-hover: #{darken($monochrome-1, 15%)};
+  --button-color-background-hover: #{darken($monochrome-1, 12%)};
 
   &.ghost {
     @include white;
